--- a/stylesheets/scss/components/_colors.scss
+++ b/stylesheets/scss/components/_colors.scss
@@ -1,5 +1,7 @@
 /**************************************
- * Link: http://www.google.com/design/spec/style/color.html#color-color-palette
+ * Colors
+ *
+ * http://www.google.com/design/spec/style/color.html#color-color-palette
  ***************************************/
 
 // Red
