--- a/stylesheets/scss/components/_functions.scss
+++ b/stylesheets/scss/components/_functions.scss
@@ -1,4 +1,5 @@
 @function remCalc($size, $font-size : $font-size-initial) {
+	$font-size: $font-size + 0px;
 	$remSize: $size / $font-size;
 	@return #{$remSize}rem;
 }
