--- a/stylesheets/scss/components/_icons.scss
+++ b/stylesheets/scss/components/_icons.scss
@@ -1,3 +1,10 @@
+/**************************************
+ * Icons
+ *
+ * http://www.google.com/design/spec/style/icons.html
+ * https://design.google.com/icons/
+ **************************************/
+
 @font-face {
 	font-family: 'Material Icons';
 	font-style: normal;
