--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -7,7 +7,7 @@
 
 button, input[type="button"], input[type="reset"], input[type="submit"], a {
 	&.sm-raised-button {
-		@extend .sm-z2, .button;
+		@extend .sm-z2, .sm-button;
 		@include transition(all 100ms ease-in-out);
 		color: $raised-button-color;
 		//color: rgba($black, .87);
@@ -78,7 +78,7 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 	}
 
 	&.sm-flat-button {
-		@extend .button;
+		@extend .sm-button;
 		@include transition(all 100ms ease-in-out);
 		color: $flat-button-color;
 		//color: rgba($black, .87);
