--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -4,104 +4,81 @@
 
 // Font paths
 $roboto-font-path: './components/fonts/Roboto/';
-//$noto-font-path: './components/fonts/Noto/';
 
 // Font size
-$font-size-initial: 14px;
+$font-size-initial: 14; //px Default 14 or 15
 $font-size: 62.5%; // Default 62.5%
 $font-size-large: 75%; // Default 75%
 $font-size-small: 50%; // Default 50%
 
-$font-color-darker: #212121; // Default #212121 - text
-$font-color-dark: #757575; // Default #757575 - secondary text, icons
-$font-color-gray: #bdbdbd; // Default #bdbdbd - hint text
-$font-color-light: #e0e0e0; // Default #e0e0e0 - divider
-$font-color-lighter: #f5f5f5; // Default #f5f5f5 - background
-
 // Typographic Scale
-$font-size-display-4: 112;
-$font-size-display-3: 56;
-$font-size-display-2: 45;
-$font-size-display-1: 34;
-$font-size-headline: 24;
-$font-size-title: 20;
-$font-size-subhead-2: 15;
-$font-size-subhead-1: 15;
-$font-size-body-2: 13;
-$font-size-body-1: 13;
-$font-size-caption: 12;
-$font-size-label: 12;
-$font-size-menu: 13;
-$font-size-button: 14;
+$font-size-display-4: 112; // Default 112
+$font-size-display-3: 56; // Default 56
+$font-size-display-2: 45; // Default 45
+$font-size-display-1: 34; // Default 43
+$font-size-headline: 24; // Default 24
+$font-size-title: 20; // Default 20
+$font-size-subhead-2: 15; // Default 15
+$font-size-subhead-1: 15; // Default 15
+$font-size-body-2: 13; // Default 13
+$font-size-body-1: 13; // Default 13
+$font-size-caption: 12; // Default 12
+$font-size-label: 12; // Default 12
+$font-size-menu: 13; // Default 13
+$font-size-button: 14; // Default 14
 
 // Typographic Scale for devices (max-width: 960px)
-$font-size-dv-subhead: 16;
-$font-size-dv-body: 14;
-$font-size-dv-menu: 14;
+$font-size-dv-subhead: 16; // Default  16
+$font-size-dv-body: 14; // Default 14
+$font-size-dv-menu: 14; // Default 14
 
 // Basic Styles
-$font-weight-display-4: 100;
-$font-weight-display-3: 300;
-$font-weight-display-2: 300;
-$font-weight-display-1: 300;
-$font-weight-headline: 300;
-$font-weight-title: 400;
-$font-weight-subhead-2: 400;
-$font-weight-subhead-1: 300;
-$font-weight-body-2: 400;
-$font-weight-body-1: 300;
-$font-weight-caption: 300;
-$font-weight-label: 300;
-$font-weight-menu: 400;
-$font-weight-button: 400;
+$font-weight-display-4: 100; // Default 100
+$font-weight-display-3: 300; // Default 300
+$font-weight-display-2: 300; // Default 300
+$font-weight-display-1: 300; // Default 300
+$font-weight-headline: 300; // Default 300
+$font-weight-title: 400; // Default 400
+$font-weight-subhead-2: 400; // Default 400
+$font-weight-subhead-1: 300; // Default 300
+$font-weight-body-2: 400; // Default 400
+$font-weight-body-1: 300; // Default 300
+$font-weight-caption: 300; // Default 300
+$font-weight-label: 300; // Default 300
+$font-weight-menu: 400; // Default 400
+$font-weight-button: 400; // Default 400
 
 // Line Height
-$line-height-display-4: 128;
-$line-height-display-3: 84;
-$line-height-display-2: 48;
-$line-height-display-1: 40;
-$line-height-headline: 32;
-$line-height-title: 28;
-$line-height-subhead-2: 28;
-$line-height-subhead-1: 24;
-$line-height-body-2: 24;
-$line-height-body-1: 20;
-$line-height-caption: 20;
-$line-height-label: 20;
-$line-height-menu: 20;
-$line-height-button: 20;
+$line-height-display-4: 128; // Default 128
+$line-height-display-3: 84; // Default 84
+$line-height-display-2: 48; // Default 48
+$line-height-display-1: 40; // Default 40
+$line-height-headline: 32; // Default 32
+$line-height-title: 28; // Default 28
+$line-height-subhead-2: 28; // Default  28
+$line-height-subhead-1: 24; // Default 24
+$line-height-body-2: 24; // Default 24
+$line-height-body-1: 20; // Default 20
+$line-height-caption: 20; // Default 20
+$line-height-label: 20; // Default 20
+$line-height-menu: 20; // Default 20
+$line-height-button: 20; // Default 20
 
 // Tracking and kerning
-$letter-spacing-display-4: -0.1;
-$letter-spacing-display-3: -0.05;
-$letter-spacing-display-2: 0;
-$letter-spacing-display-1: 0;
-$letter-spacing-headline: 0;
-$letter-spacing-title: 0.05;
-$letter-spacing-subhead-2: 0.1;
-$letter-spacing-subhead-1: 0.1;
-$letter-spacing-body-2: 0.1;
-$letter-spacing-body-1: 0.1;
-$letter-spacing-caption: 0.2;
-$letter-spacing-label: 0.1;
-$letter-spacing-menu: 0.1;
-$letter-spacing-button: 0.1;
-
-// Basic colors / Color contrast
-$font-color-display-4: $font-color-dark;
-$font-color-display-3: $font-color-dark;
-$font-color-display-2: $font-color-dark;
-$font-color-display-1: $font-color-dark;
-$font-color-headline: $font-color-darker;
-$font-color-title: $font-color-darker;
-$font-color-subhead-2: $font-color-darker;
-$font-color-subhead-1: $font-color-darker;
-$font-color-body-2: $font-color-darker;
-$font-color-body-1: $font-color-darker;
-$font-color-caption: $font-color-dark;
-$font-color-label: $font-color-darker;
-$font-color-menu: $font-color-darker;
-$font-color-button: $font-color-darker;
+$letter-spacing-display-4: -0.1; // Default -0.1
+$letter-spacing-display-3: -0.05; // Default -0.05
+$letter-spacing-display-2: 0; // Default 0
+$letter-spacing-display-1: 0; // Default 0
+$letter-spacing-headline: 0; // Default 0
+$letter-spacing-title: 0.05; // Default 0.05
+$letter-spacing-subhead-2: 0.1; // Default 0.1
+$letter-spacing-subhead-1: 0.1; // Default 0.1
+$letter-spacing-body-2: 0.1; // Default 0.1
+$letter-spacing-body-1: 0.1; // Default 0.1
+$letter-spacing-caption: 0.2; // Default 0.2
+$letter-spacing-label: 0.1; // Default 0.1
+$letter-spacing-menu: 0.1; // Default 0.1
+$letter-spacing-button: 0.1; // Default 0.1
 
 /**************************************
  * Colors
@@ -150,11 +127,10 @@ $large-screen: 1600px; // Small desktop
 $xlarge-screen: 1920px; // "Normal" desktop
 
 // The amount of columns. Default: 12
-$columns: 12;
+$columns: 12; // Default 12
 
 // Gutter
-$gutter: 16px;
-// More gutter settings can be found in _grid.scss
+$gutter: 16px; // Default 16px
 
 /**************************************
  * Icons
