--- a/stylesheets/scss/components/_code.scss
+++ b/stylesheets/scss/components/_code.scss
@@ -15,7 +15,7 @@ code, pre {
 	font-family: 'Source Code Pro', Monospaced;
 	padding: remCalc(5px);
 	font-size: remCalc(13px);
-	margin: 0;
+	margin: remCalc(10px) 0;
 
 	pre {
 		display: block;
