--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -19,3 +19,4 @@
 @import 'components/buttons'; // Used to style buttons (can be turned off)
 @import 'components/ripple'; // Used to create ripple effect (can be turned off)
 @import 'components/cards'; // Used to style cards (can be turned off)
+@import 'components/chips'; // Used to style chips (can be turned off)
