--- a/stylesheets/scss/components/_mixins.scss
+++ b/stylesheets/scss/components/_mixins.scss
@@ -64,6 +64,14 @@
 		@content;
 	}
 
+	@-ms-keyframes #{$name} {
+		@content;
+	}
+
+	@-o-keyframes #{$name} {
+		@content
+	}
+
 	@keyframes #{$name} {
 		@content;
 	}
