--- a/stylesheets/scss/components/_mixins.scss
+++ b/stylesheets/scss/components/_mixins.scss
@@ -116,3 +116,24 @@
 	letter-spacing: $kerningSize+0px;
 	letter-spacing: ($kerningSize/10)+0rem;
 }
+
+// Waves
+@mixin waves-transition($transition) {
+	-webkit-transition: $transition;
+	-moz-transition: $transition;
+	-o-transition: $transition;
+	transition: $transition;
+}
+
+@mixin waves-transform($string) {
+	-webkit-transform: $string;
+	-moz-transform: $string;
+	-ms-transform: $string;
+	-o-transform: $string;
+	transform: $string;
+}
+
+@mixin waves-box-shadow($shadow) {
+	-webkit-box-shadow: $shadow;
+	box-shadow: $shadow;
+}
