--- a/stylesheets/scss/components/_ripple.scss
+++ b/stylesheets/scss/components/_ripple.scss
@@ -1,14 +1,41 @@
+/**************************************
+ * Ripple effects
+ *
+ * http://codepen.io/anon/pen/NxEBvb
+ * http://codepen.io/patrickhill/pen/azwBdq/
+ **************************************/
+
 .sm-hover-ripple {
-	z-index: 10;
+	z-index: 1;
 	overflow: hidden;
 	position: relative;
 
 	&:hover {
 		&:after {
-			@include transform(scale(1) translateZ(0));
-			@include transition(all .5s ease);
+			@include animation(beat 3s ease-in-out infinite);
+
+			@include keyframes(beat) {
+				0%, 50%, 100% {
+					@include transform(scale(1) translateZ(0));
+				}
+				25%, 75% {
+					@include transform(scale(.98) translateZ(0));
+				}
+			}
+		}
+
+		&:before {
+			background: rgba($black, .12);
+			content: "";
+			height: 100%;
+			width: 150%;
+			position: absolute;
+			z-index: -2;
+			margin: 0px -50%;
 		}
 	}
+
+
 
 	&:after {
 		content: "";
@@ -16,6 +43,7 @@
 		height: 0;
 		padding-top: 85%;
 		object-fit: contain;
+		background: $blue;
 		position: absolute;
 		top: 100%;
 		left: 50%;
@@ -23,7 +51,31 @@
 		opacity: 1;
 		border-radius: 50%;
 		@include transform(scale(0) translateZ(0));
-		@include transition(all .2s ease);
+		@include transition(all .2s ease-in-out);
 		z-index: -1;
 	}
 }
+
+.sm-ripple-effect{
+	position: absolute;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	background: white;
+	@include animation(ripple-animation 2s);
+	z-index: 2;
+
+	@include keyframes(ripple-animation) {
+		from {
+			transform: scale(1);
+			opacity: 0.4;
+		}
+		to {
+			transform: scale(100);
+			opacity: 0;
+		}
+	}
+}
+
+
+
