Added table styling

--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -20,3 +20,4 @@
 @import 'components/ripple'; // Used to create ripple effect (can be turned off)
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
+@import 'components/tables'; // Used to style table (can be turned off)
