--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -21,3 +21,4 @@
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
 @import 'components/tables'; // Used to style table (can be turned off)
+@import 'components/tooltips'; // Used to style tooltip (can be turned off)
