--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -20,5 +20,6 @@
 @import 'components/ripple'; // Used to create ripple effect (can be turned off)
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
-@import 'components/tables'; // Used to style table (can be turned off)
-@import 'components/tooltips'; // Used to style tooltip (can be turned off)
+@import 'components/tables'; // Used to style tables (can be turned off)
+@import 'components/tooltips'; // Used to style tooltips (can be turned off)
+@import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
