--- a/stylesheets/scss/components/_sidenav.scss
+++ b/stylesheets/scss/components/_sidenav.scss
@@ -130,6 +130,14 @@
 		}
 	}
 
+	.sm-no-hover {
+		background: none;
+
+		&:hover {
+			background: none;
+		}
+	}
+
 	ul {
 		list-style-type: none;
 		margin: 0;
