--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -105,24 +105,62 @@ $appbar-medium-height: remCalc(56px); // Default remCalc(56px)
 $appbar-large-height: remCalc(64px); // Default remCalc(64px)
 
 /**************************************
+ * Buttons
+ **************************************/
+
+$raised-button-background: $main-color; // Default $main-color
+$raised-button-background-hover: $main-color; // Default $main-color
+$raised-button-color: $white; // Default $white
+$raised-button-color-hover: $raised-button-color; // Default $raised-button-color
+$raised-icon-color: $white; // Default $white
+$raised-min-width: remCalc(64px); // Default remCalc(64px)
+$raised-size: remCalc(32px); // Default remCalc(32px)
+$raised-padding: 0 remCalc(16px); // Default 0 remCalc(16px)
+$raised-margin: remCalc(8px); // Default remCalc(8px)
+$raised-transition: box-shadow 100ms ease-in-out; // Default box-shadow 100ms ease-in-out
+$raised-dense-size: remCalc(32px); // Default remCalc(32px)
+$raised-dense-font-size: remCalc(13px); // Default remCalc(13px)
+$raised-disabled-background: rgba($black, .12); // Default rgba($black, .12)
+$raised-disabled-color: rgba($black, .30); // Default rgba($black, .30)
+$raised-disabled-background-hover: rgba($black, .12); // Default rgba($black, .12)
+$raised-disabled-color-hover: rgba($black, .30); // Default rgba($black, .30)
+
+$flat-button-color: $main-color; // Default $main-color
+$flat-icon-color: $main-color; // Default $main-color
+$flat-button-focus: $grey; // Default $grey
+
+$floating-button-background: $main-color; // Default $main-color
+$floating-button-icon: $white; // Default $white
+
+/**************************************
  * Chips
  **************************************/
 
-$chips-text: $black;
-$chips-text-hover: $white;
-$chips-background: $grey-300;
-$chips-background-hover: $grey-600;
-$chips-delete-cross: $chips-background;
-$chips-delete-cross-hover: $chips-background-hover;
-$chips-delete-background: $black;
-$chips-delete-background-hover: $chips-text-hover;
+$chips-text: $black; // Default $black
+$chips-text-hover: $white; // Default $white
+$chips-background: $grey-300; // Default $grey-300
+$chips-background-hover: $grey-600; // Default $grey-600
+$chips-delete-cross: $chips-background; // Default $chips-background
+$chips-delete-cross-hover: $chips-background-hover; // Default $chips-background-hover
+$chips-delete-background: $black; // Default $black
+$chips-delete-background-hover: $chips-text-hover; // Default $chips-text-hover
 
 /**************************************
  * Selection controls
  **************************************/
-$selection-color: $main-color; // Default $main-color
-$selection-size: remCalc(18.2px); // Default remCalc(18.2px)
-$selection-margin: remCalc(20px); // Default remCalc(20px)
+$checkbox-color: lighten($black, (100% - 54%));
+$checkbox-color-checked: $main-color; // Default $main-color
+$checkbox-size: remCalc(18.2px); // Default remCalc(18.2px)
+$checkbox-margin: remCalc(20px); // Default remCalc(20px)
+
+$radio-color: $checkbox-color; // Default $main-color
+$radio-size: $checkbox-size; // Default remCalc(18.2px)
+$radio-margin: $checkbox-margin; // Default remCalc(20px)
+
+/*
+$selection-radial-color: rgba($checkbox-color, .26); // Default rgba($checkbox-color, .26)
+$selection-radial-size: 2.8rem; // Default 2.8rem
+*/
 
 /**************************************
  * Snackbars and toasts
@@ -160,25 +198,13 @@ $tooltip-z-index: 10; // Default 10
 
 
 // Sidenav
-$sidenav-background: $white;
-$sidenav-hover: $main-color;
+$sidenav-background: $white; // Default $white
+$sidenav-hover: $main-color; // Default $main-color
 
-$sidenav-full-title-background: $main-color;
-$sidenav-full-title-color: $white;
+$sidenav-full-title-background: $main-color; // Default $main-color
+$sidenav-full-title-color: $white; // Default $white
 
-// Buttons
-$raised-button-background: $main-color;
-$raised-button-background-hover: $main-color;
-$raised-button-color: $white;
-$raised-button-color-hover: $raised-button-color;
-$raised-icon-color: $white;
 
-$flat-button-color: $main-color;
-$flat-icon-color: $main-color;
-$flat-button-focus: $grey;
-
-$floating-button-background: $main-color;
-$floating-button-icon: $white;
 
 /**************************************
  * Grid settings
